# cppconf2017-mc1

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.travis/: install.sh  run.sh
include/hello/: hello.h
src/: main.cpp
src/hello/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt  test_hello.cpp
test_package/: CMakeLists.txt  conanfile.py  test_hello.cpp
